# fastapi-template

./: .dockerignore  .env.dev.example  .env.prod.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  mypy.ini  postgresql.conf  postgresql.prod.conf  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
script/: start.sh
src/: __main__.py
src/api/: __init__.py
src/api/extra/: __init__.py
src/api/extra/monitoring/: __init__.py  monitoring.py
src/api/v1/: __init__.py
src/api/v1/user/: __init__.py  user.py
src/app/: __init__.py
src/app/controller/: user.py
src/app/factory/: __init__.py  factory.py
src/app/model/: __init__.py  user.py
src/app/repository/: user.py
src/app/scheme/: __init__.py
src/app/scheme/response/: __init__.py  user.py
src/core/: logger.py  setting.py
src/core/controller/: __init__.py  base.py  sqlalchemy.py
src/core/database/: __init__.py  base.py  meta.py  session.py
src/core/database/dependency/: __init__.py  session.py
src/core/database/mixin/: as_dict.py  timestamp.py
src/core/exception/: __init__.py  base.py  database.py
src/core/fastapi/: __init__.py  application.py  gunicorn_application.py  lifespan.py  uvicorn_worker.py
src/core/fastapi/dependency/: __init__.py  pagination.py  projection.py  sort.py
src/core/fastapi/initialization/handler/: __init__.py  custom_http_exception.py  exception.py  httpx_exception.py  sqlalchemy_exception.py
src/core/fastapi/middleware/: __init__.py  logger.py  session.py
src/core/helper/scheme/: __init__.py
src/core/helper/scheme/request/: __init__.py  filter.py
src/core/helper/scheme/response/: count.py  error.py  for_filter.py  pagination.py  timestamp.py
src/core/helper/type/: __init__.py  controller.py  exception.py  filter.py  pagination.py  sort.py
src/core/repository/: __init__.py  base.py  sqlalchemy.py
src/core/util/: project.py
src/migration/: env.py
src/migration/versions/: 2025_11_22_0249-6ff297fa5549_add_user_base_model.py  2025_11_22_1219-ff8b0152932e_update_user.py
