[project]
name = "fastapi-template"
version = "0.1.0"
description = "Base template for FastAPI+SQLAlchemy+PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.13,<1",
]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["script*"]

[tool.ruff]
line-length = 80
src = ["src/"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyugrade
    "UP"
]
ignore = ["D104", "D107", "B008", "E721"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
