[project]
name = "fastapi-template"
version = "0.1.0"
description = "Base template for FastAPI+SQLAlchemy+PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2,<2",
    "asyncpg>=0.30.0,<1",
    "fastapi>=0.115.12,<1",
    "greenlet>=3.2.3,<4",
    "gunicorn>=23.0.0,<24",
    "httpx>=0.28.1,<1",
    "itsdangerous>=2.2.0,<3",
    "loguru>=0.7.3,<1",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.9.1,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0.41,<3",
    "tomlkit>=0.13.3,<1",
    "orjson>=3.11.4,<4",
    "uvicorn[standard]>=0.34.3,<1",
    "yarl>=1.20.1,<2",
    "uvicorn-worker>=0.4.0",
    "authlib>=1.6.5",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.13,<1",
]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["script*"]

[tool.ruff]
line-length = 80
src = ["src/"]
extend-exclude = ["migration"]
force-exclude = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyugrade
    "UP"
]
ignore = ["D104", "D107", "B008", "E721"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
